--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "^0.5.0+1"
+  firebase_auth: "^0.18.1+2"
+  firebase_database: "^4.1.1"
   camera:
   path_provider:
   path:
